Added another python script for generating csvs called csvProcessing.py. Added the rest of the protocol into bridgeness.R and tried enrichment on algorithms that didn't have NaN or infinity with enrichmentReduced.R. Found a suspected bug in fitSigmoid. Generated csvs and bridgeness graphs all found in the folder Bridgeness, the csv are regarding the robustness of each algorirthm.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Database/
 /synaptic.proteome_SR_20210408.db
 /~$-Bioinformatics-Protocol_revised_clean.docx
 /.idea/rRemoteSettings.xml
+/.idea/rGraphicsSettings.xml
+/.idea/rSettings.xml
